Update docs to WebSight CMS Archetype 2.0