@@ -1,12 +1,12 @@
 # Project setup
 
-This document provides an introduction to working with WebSight projects. It explains how to configure, build and run a new project using Maven Archetype and Docker. It also describes the contents of the project build and runtime files.
+This document provides an introduction to working with WebSight projects. It explains how to configure, build and run a new project using Maven Archetype. It also describes the contents of the project build and runtime files.
 
 Although the specific contents of your project may vary depending on your needs, the sample project described on this page is a useful starting-point for running Web applications using WebSight CMS.
 
 
 ## Prerequisites
-To create and run a project, you will need [Java 17](https://adoptium.net/) or later, [Maven](https://maven.apache.org/) 3.8.5 or later and [Docker Desktop](https://www.docker.com/products/docker-desktop/).
+To create and run a project, you will need [Java 17](https://adoptium.net/) or later, [Maven](https://maven.apache.org/) 3.8.5 or later.
 
 You can check your Java version in most environments with:
 
@@ -22,13 +22,6 @@ Check your Maven version with:
 ```
 mvn --version
 Apache Maven 3.8.5 (3599d3414f046de2324203b78ddcf9b5e4388aa0)
-```
-
-Check your Docker installation by running:
-
-```
-docker --version
-Docker version 20.10.14
 ```
 
 ## Generate a project
@@ -47,7 +40,7 @@ Example command:
 mvn archetype:generate                                     \
   -DarchetypeGroupId=pl.ds.websight                        \
   -DarchetypeArtifactId=websight-cms-ce-project-archetype  \
-  -DarchetypeVersion=1.7                                   \
+  -DarchetypeVersion=2.0                                   \
   -DgroupId=my.groupId                                     \
   -DartifactId=my-artifactId                               \
   -Dversion=1.0.0-SNAPSHOT                                 \
@@ -66,7 +59,6 @@ The above command creates a project with the following structure:
     ├── application
     ├── content
     ├── distribution
-    ├── environment
     ├── pom.xml
     └── tests
 
@@ -81,53 +73,26 @@ Note in particular the following modules:
     * `backend` - CMS elements (pages, templates, components, etc.), Java models and services
     * `frontend` - frontend project bundled by webpack
 * `content` - initial content as a JCR vault module (content_package)
-* `distribution` - project distribution - Sling feature model and Docker images
-* `environment` - scripts and files used to build environments
-    * `local` - local environment managed by Docker Compose
+* `distribution` - project distribution - Sling feature model and optionally Docker images
 * `tests` - tests used to validate the distribution
     * `content` - content for end-to-end tests
     * `end-to-end` - end-to-end tests
 
+It is important to note that the project contains built-in server definitions and configurations. The `distribution` module is responsible for bundling the application based on the configurations and WebSight CMS modules using [`Sling Feature Model`](https://sling.apache.org/documentation/development/feature-model.html). Optionally it also prepares the Docker images (however, Docker is out of scope of this guide).
 
-
-
-## Distribution and environment
-It is important to note that the project contains built-in server definitions and configurations. The `distribution` module is responsible for bundling the application based on the configurations and WebSight CMS modules using `Sling Feature Model`. It also prepares the required Docker images to run the complete stack. The finalized project build artifacts are immutable Docker images that can be run on local, test, and production environments. Environment-specific configurations can be implemented by injecting system variables.
-
-!!! Info
-     It is possible to deploy application modules to running containers without rebuilding the Docker images, but the changes will be lost after each container restart and can be used only for local development.
-
-The `distribution` delivers two Docker images:
-
-
-
-* CMS - Image that bundles WebSight CMS with your application
-* Nginx - An HTTP server with your project's configuration
-
-A third container runs MongoDB as a default data store for Jackrabbit OAK (the persistence layer used by WebSight CMS). The data store stores content such as pages or assets managed by the CMS.
-
-We use Docker Compose to orchestrate containers during local setup. See the environment/local module for details.
-
-This illustration shows the runtime environment and roles:
-
-![Runtime environment and roles](diagrams/generated/runtime-docker-compose.png)
- 
-## Build the instance
+## Build the application
 To build the project, use the Maven command:
 
 
+```bash
+mvn clean package
 ```
-mvn clean install
-```
-
 
 Add e2e profile to execute end-to-end tests:
 
-
+```bash
+mvn clean verify -P e2e
 ```
-mvn clean install -P e2e
-```
-
 
 You should see successful end-to-end test execution in the log:
 
@@ -142,27 +107,18 @@ Execution should end with a successful build message:
     <img class="image--with-border" src="./img03.png" alt="Successful build log">
 </p>
 
-!!! info 
-        On some Mac systems, Docker builds may fail with the following error message
-
-        ```bash
-        [ERROR] Failed to execute goal io.fabric8:docker-maven-plugin:0.40.1:build (build-docker-image) on project ws-linux-box-distribution: Execution build-docker-image of goal io.fabric8:docker-maven-plugin:0.40.1:build failed: No <dockerHost> given, no DOCKER_HOST environment variable, no read/writable '/var/run/docker.sock' or '//./pipe/docker_engine' and no external provider like Docker machine configured -> [Help 1]
-        ```
-
-        If this occurs, check the Docker Maven Plugin issue tracker [issue](https://github.com/fabric8io/docker-maven-plugin/issues/1616) for details and available workarounds.
-
 ## Run the instance
-Once your project build is complete, you can start a local instance by navigating to the `environment/local` folder and running:
+Once your project build is complete, you can start a local instance by running the following command:
 
-
+```bash
+java --add-opens java.base/java.lang=ALL-UNNAMED \
+  -jar distribution/target/dependency/org.apache.sling.feature.launcher.jar \
+  -f distribution/target/slingfeature-tmp/feature-websight-cms-example-project-tar.json
 ```
-docker compose up
-```
 
+The resulting instance runs WebSight CMS with your application at [localhost:8080](http://localhost:8080/). The default login is `wsadmin`/`wsadmin`. Published content is available locally at [localhost:8080/published](http://localhost:8080/published/).
 
-The resulting instance runs WebSight CMS and your application at [http://localhost:8080/](http://localhost:8080/) The default login is wsadmin/wsadmin. Published content is available locally at [http://localhost/](http://localhost/)
-
-See README.md in the `environment` and `environment/local` folders for additional details about the runtime environment.
+See `README.md` for additional details about the runtime environment.
  
 ## Instance overview
 After login, you will be redirected to the Spaces list. In WebSight CMS content is organized in Spaces. The Spaces list shows you the generated application and its associated content using the `content` module:
